[tool.poetry]
name = "fashion_recommendations"
version = "0.1.0"
description = ""
authors = ["Christopher Singer <christopher.singer.analytics@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.5.12"
python-slugify = "^5"
pandas = "^1.4.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
