[tool.poetry]
name = "fashion_recommendations"
version = "0.1.0"
description = ""
authors = ["Christopher Singer <christopher.singer.analytics@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10"
kaggle = "^1.5.12"
python-slugify = "^5"
pandas = "^1.4.1"
numpy = "^1.21"
dask = "^2022.3.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
